[Feat] Added Interview List View
Added all functionality to get interviews from an API and display them on a list

ID: SM.8.1.1

--- a/frontend/themes/citrusapp/styles.css
+++ b/frontend/themes/citrusapp/styles.css
@@ -1,5 +1,6 @@
 @import url('./main-layout.css');
 @import url('./views/card-list-view.css');
+@import url('./views/interview-list-view.css');
 @import url('./views/person-form-view.css');
 @import url('lumo-css-framework/all-classes.css');    html {
       --lumo-base-color: #fbf9f9;
