--- a/frontend/themes/citrusapp/styles.css
+++ b/frontend/themes/citrusapp/styles.css
@@ -1,6 +1,8 @@
 @import url('./main-layout.css');
 @import url('./views/card-list-view.css');
 @import url('./views/interview-list-view.css');
+@import url('./views/interview-details-view.css');
+@import url('./views/applicant-list-view.css');
 @import url('./views/person-form-view.css');
 @import url('lumo-css-framework/all-classes.css');    html {
       --lumo-base-color: #fbf9f9;
